--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,5 +11,5 @@
 	<label for="password">Email</label><br>
 	<input type="password" name="user[password]"><br>
 	
-	<p><input type="submit" value="<%= submit_btn_value %>"></p>
+	<p><input type="submit" value="<%= submit_btn_value %>" class="btn btn-primary"></p>
 </form>
