--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
-<h1>Register</h1>
+<div class="container">
+	<h1>Register</h1>
 
-<%= render "users/form", 
-		:user => @user,
-		:verb => "POST",
-		:submit_btn_value => "Register"
-%>
+	<%= render "users/form", 
+			:user => @user,
+			:verb => "POST",
+			:submit_btn_value => "Register"
+	%>
+</div>
