--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,17 @@
 <html>
 <head>
   <title>PunchStarter</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	<%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<%= render "layouts/navbar" %>
 
-<%= yield %>
 
-<% if logged_in? %>
-	<%= button_to("Log Out", session_url, method: :delete) %>
-<% end %>
+	<%= yield %>
+
 
 </body>
 </html>
