--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,8 +8,8 @@
 	<label for="name">What's your name?</label><br>
 	<input type="text" name="user[name]" value="<%= user.name %>"><br>
 	
-	<label for="password">Email</label><br>
-	<input type="password" name="user[password]"><br>
+	<label for="password">Password</label><br>
+	<input type="password" name="user[password]"><br><br>
 	
-	<p><input type="submit" value="<%= submit_btn_value %>" class="btn btn-primary"></p>
+	<input type="submit" value="<%= submit_btn_value %>" class="btn btn-success">
 </form>
