--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,6 @@
 	<%= render "users/form", 
 			:user => @user,
 			:verb => "POST",
-			:submit_btn_value => "Register"
+			:submit_btn_value => "Sign me up!"
 	%>
 </div>
