--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div.user-profile {
+	margin-left: auto;
+	margin-right: auto;
+	background-color: lightgray;
+	padding: 50px;
+	width: 100%;
+}
+
+.blue-square {
+	border-radius: 5px;
+}
+
+
