--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container user-profile row">
 	<div class="col-xs-2">
-		<img alt="Missing_medium" class="blue-square" height="160" src="https://d297h9he240fqh.cloudfront.net/assets/users/missing_medium.png" width="160">
+		<img alt="blue square" class="blue-square" src="/assets/images/KickStarterBlueSquare.png" width="160" height="160" alt="KickStarterBlueSquare">
 	</div>
 	<div class="show-body col-xs-6">
 		<h1><%= @user.name %></h1>
