--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -6,16 +6,19 @@ div.footer {
 	position:fixed;
   left:0px;
   bottom:0px;
-  height:200px;
+  height:220px;
   width:100%;
 }
 
 .footer-list-title {
+	margin: 30px 90px 0px 90px;
 	font-weight: bold;
 	color: white;
 }
 
 .footer-list {
+	margin: 0px 90px;
+	padding-left: 0;
 	list-style-type: none;
 }
 
