--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,7 +1,7 @@
 div.user-profile {
 	margin-left: auto;
 	margin-right: auto;
-	background-color: lightgray;
+	background-color: #ECECE3;
 	padding: 50px;
 	width: 100%;
 }
