--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,16 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/#">PunchStarter</a>
+      <a class="navbar-brand" href="/#">
+				
+			
+			<%= image_tag("PunchStarterLogo.png", :width=> '200px', :height =>'100px')%>
+			</a>
     </div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav primary-links">
-				<li><a href="#">Discover</a></li>
-				<li><a href="#">Start</a></li>
+				<li><a href="<%= api_projects_url %>">Discover</a></li>
+				<li><a href="<%= new_api_project_url %>">Start</a></li>
 				
 			</ul>
 			<span class="for-search-bar"></span>
@@ -20,13 +24,13 @@
 						</a>
 						<div class="dropdown-menu row">
 							<div class="col-xs-3">
-								<p><strong>My Stuff</strong></p>
+								<p class="my-stuff-links"><strong>My Stuff</strong></p>
 									<ul class="my-stuff-links">
 										<li><a href="#">Messages</a></li>
 										<li><a href="#">Activity</a></li>
 										<li><a href="#">Starred projects</a></li>
 									</ul><br>
-								<p><strong>Account</strong></p>
+								<p class="account-links"><strong>Account</strong></p>
 									<ul class="account-links">
 										<li><a href="<%= user_url(current_user)%>">Profile</a></li>
 										<li><a href="#">Backer history</a></li>
@@ -34,6 +38,18 @@
 										<li><a href="#">Find friends</a></li>
 									</ul><br>
 							</div>
+							<% if logged_in? && !current_user.created_projects.empty? %>
+							<div class="col-xs-offset-2 col-xs-3">
+								<p class="project-links"><strong>Created projects</strong></p>
+								<ul class="project-links">
+									<% current_user.created_projects.each do |project| %>
+										<li>
+											<a href="<%= api_project_url(project)%>"><%= project.title%></a>
+										</li>
+									<% end %>
+								</ul>
+							</div>
+							<% end %>
 							<div class="logout-btn" style="clear:both"><p> You're logged in as <%= current_user.name%><br> <%= link_to("Log out", session_url, { method: :delete})%></p></div>
 						</div>
 					</li>
