--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,16 @@
 <html>
 <head>
   <title>PunchStarter</title>
-	<%= stylesheet_link_tag    "application", :media => "all" %>
+	<%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	<%= render "layouts/navbar" %>
 
-
 	<%= yield %>
 
+	<div class="space"></div>
 	<%= render "layouts/footer" %>
 </body>
 </html>
