--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,27 @@
 
 @import "bootstrap";
 
+html,
+body {
+	margin:0px;
+	padding:0px;
+	height:100%;
+}
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#actual-stuff {
+	margin-top: 16px;
+}
+#content {
+	padding:10px;
+	padding-bottom:220px;
+}
+#footer {
+	width:100%;
+	height:220px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
