--- a/app/views/api/projects/_form.html.erb
+++ b/app/views/api/projects/_form.html.erb
@@ -9,7 +9,7 @@
 	<select name="project[category]">
 		<option></option>
 		<% Project::CATEGORIES.each do |k, category| %>
-			<option value="<%= k %>"><%= category %></option>
+			<option value="<%= category %>"><%= category %></option>
 		<% end %>
 	</select><br><br>
 
