--- a/app/views/api/projects/show.html.erb
+++ b/app/views/api/projects/show.html.erb
@@ -3,7 +3,7 @@
 	<h6> by <%= @project.creator.name %></h6>
 	<h5>Category: <%= @project.category %></h5>
 	<h5>Location: <%= @project.project_location %></h5>
-	<h4>Funding Goal: <%= @project.funding_goal %></h4>
+	<h4>Funding Goal: $<%= @project.funding_goal %></h4>
 	<h5>Funding Duration: <%= @project.created_at + @project.funding_goal.days %></h5>
 
 	<p><%= @project.short_blurb %></p>
