--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,16 +24,16 @@
 		</ul>
 	</div>
 	
-	<div class="col-xs-3">
+	<div class="col-xs-4">
 		<p class="footer-list-title"><strong>Discover<strong></p>
-		<ul class="footer-list">
+		<ul class="footer-list category-double">
 			<% Project::CATEGORIES.values.each do |category| %>
 			<li><a href="#"><%= category %></a></li>
 			<% end %>
 		</ul>
 	</div>
 	
-	<div class="col-xs-3">
+	<div class="col-xs-2">
 		<p class="footer-list-title"><strong>Hello<strong></p>
 		<ul class="footer-list">
 			<li><a href="#">Twitter</a></li>
