--- a/app/assets/templates/home_page/staff_picks.jst.ejs
+++ b/app/assets/templates/home_page/staff_picks.jst.ejs
@@ -1,7 +1,6 @@
-<div class="row">
- <h3 class="staff-picks-body">Staff Picks: </h3>
+<div class="staff-picks row">
  <div class="col-xs-9 staff-picks-body">
-
+ 	 <h3>Staff Picks: </h3>
  	 
  </div>
  
