--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,1 @@
-<div class="container">
-	<h1>Register</h1>
-
-	<%= render "users/form", 
-			:user => @user,
-			:verb => "POST",
-			:submit_btn_value => "Sign me up!"
-	%>
-</div>
+<%= render "layouts/new" %>
