--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,9 +25,6 @@ body {
 	min-height:100%;
 	position:relative;
 }
-#actual-stuff {
-	margin-top: 16px;
-}
 #content {
 	padding:10px;
 	padding-bottom:220px;
@@ -35,7 +32,10 @@ body {
 #footer {
 	width:100%;
 	height:220px;
-	position:absolute;
+	position:relative;
 	bottom:0;
 	left:0;
+}
+p.field-note {
+	font-size: 0.8em;
 }
