--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container user-profile row">
+<div class="user-profile row">
 	<div class="col-xs-2">
 		<%= image_tag("KickStarterBlueSquare.png", :alt=>"User Icon", :class=>"blue-square") %>
 	</div>
