Finish Associations, ProjectBody MVC

--- a/app/views/api/projects/_form.html.erb
+++ b/app/views/api/projects/_form.html.erb
@@ -1,33 +1,48 @@
 <form action="<%= api_projects_url %>" method="POST">
-	<%= input_auth_token %>
+	<%= input_auth_token %>	
 	<input type="hidden" name="method" value="<%= verb %>">
 
-	<label>Project title</label>
-	<input type="text" name="project[title]" value="<%= project.title %>"><br><br>
+	<div class="grey-field">
+		<label>Project title</label>
+		<input type="text" name="project[title]" value="<%= project.title %>"><br><br>
+	</div>
+	
+	<div class="grey-field">
+		<label>Category</label>
+		<select name="category[name]">
+			<option></option>
+			<% Project::CATEGORIES.each do |k, category| %>
+				<option value="<%= k %>"><%= category %></option>
+			<% end %>
+		</select><br><br>
+	</div>
 
-	<label>Category</label>
-	<select name="category[name]">
-		<option></option>
-		<% Project::CATEGORIES.each do |k, category| %>
-			<option value="<%= k %>"><%= category %></option>
-		<% end %>
-	</select><br><br>
+	<div class="grey-field">
+		<label>Short blurb</label>
+		<input type="textarea" name="project[short_blurb]" value="<%= project.short_blurb %>"><br><br>
+	</div>
 
-	<label>Short blurb</label>
-	<input type="textarea" name="project[short_blurb]" value="<%= project.short_blurb %>"><br><br>
+	<div class="grey-field">
+		<label>Project location</label>
+		<input type="text" name="project[project_location]" value="<%= project.project_location %>"><br><br>
+	</div>
 
-	<label>Project location</label>
-	<input type="text" name="project[project_location]" value="<%= project.project_location %>"><br><br>
+	<div class="grey-field">
+		<label>Funding duration</label>
+		<input 
+			type="radio" 
+			name="project[funding_duration]" 
+			value="Number of days">
+			Number of Days <input type="text" name="project[funding_duration]"><br><br>
+	</div>
 
-	<label>Funding duration</label>
-	<input 
-		type="radio" 
-		name="project[funding_duration]" 
-		value="Number of days">
-		Number of Days <input type="text" name="project[funding_duration]"><br><br>
-
-	<label>Funding goal</label>
-	<input type="text" name="project[funding_goal]" value="<%= project.funding_goal %>"><br><br>
-
+	<div class="grey-field">
+		<label>Funding goal</label>
+		<input type="text" name="project[funding_goal]" value="<%= project.funding_goal %>"><br><br>
+	</div>
+	
+	
 	<input type="submit" class="btn btn-primary" value="<%= submit_btn_value %>">
+	
+	
 </form>
