Add CSS(unfinished) to project creation. Clean-up unused files.

--- a/app/views/api/projects/new.html.erb
+++ b/app/views/api/projects/new.html.erb
@@ -1,5 +1,7 @@
-
-<h1>Start your own Project</h1>
+<div class="grey-field">
+	<h1>Meet your new project.</h1>
+	<p>Start by giving it a name, a pic, and other important details.</p>
+</div>
 
 <%= render "api/projects/form", 
 		:project => @project,
