Finish project details creation in Backbone, as well as Backbone level associations.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav primary-links">
 				<li><a href="<%= api_projects_url %>">Discover</a></li>
-				<li><a href="<%= new_api_project_url %>">Start</a></li>
+				<li><a href="/#/projects/new">Start</a></li>
 			</ul>
 			<span class="for-search-bar"></span>
 			
