--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -1,34 +1,113 @@
-<form>
-	<label>Project title</label>
-	<input type="text" name="project[title]" value="<%= project.escape('title') %>"><br><br>
+<% for (var key in gon.categories) { %>
+	<% if (gon.categories.hasOwnProperty(key)) { %>
+		<% PunchStarter.categories.getOrFetch(key); %>
+	<% } %>
+<% } %>
 
-	<label>Category</label>
-	<select name="category[name]">
-		<option></option>
-		<% for (var key in gon.categories) { %>
-			<% if (gon.categories.hasOwnProperty(key)) { %>
-			<option value="<%= key%>">
-				<%= gon.categories[key] %>
-			</option>
-			<% } %>
-		<% } %>
-	</select><br><br>
+<div class="grey-field">
+	<h1>Meet your new project.</h1>
+	<p>Start by giving it a name, a pic, and other important details.</p>
+</div>
 
-	<label>Short blurb</label>
-	<input type="textarea" name="project[shortBlurb]" value="<%= project.escape('short_blurb') %>"><br><br>
+<div class="row">
+	<div class="col-xs-2"></div>
+		
+	<div class="col-xs-6">
+		<form>
+			<div class="form-group">
+				
+				<ol class="project-fields row">
+					<li class= "project-title">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Project title</label>
+							</div>
+							<div class="project-input">
+								<input type="text" name="project[title]" value="<%= project.title %>" class="form-control">
+								<p class="field-note">Your project title should be simple, specific, and memorable, and it should include the title of the creative project you're raising funds for. Avoid words like "help,” "support,” or "fund.”</p>
+							</div>
+						</div>
+					</li>
+	
+					<li class="project-category">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Category</label>
+							</div>
+							<div class="project-input">
+								<select name="category[name]" class="form-control">
+									<option></option>
+							    <% for (var key in gon.categories) { %>
+										<% if (gon.categories.hasOwnProperty(key)) { %>
+										<option value="<%= key%>">
+											<%= gon.categories[key] %>
+										</option>
+										<% } %>
+									<% } %>
+								</select>
+							</div>
+						</div>
+					</li>
 
-	<label>Project location</label>
-	<input type="text" name="project[projectLocation]" value="<%= project.escape('project_location') %>"><br><br>
+					<li class="project-short-blurb">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Short blurb</label>
+							</div>
+							<div class="project-input">
+								<input type="textarea" name="project[shortBlurb]" value="<%= project.shortBlurb %>" class="form-control">
+							</div>
+						</div>
+					</li>
 
-	<label>Funding duration</label>
-	<input 
-		type="radio" 
-		name="project[funding_duration]" 
-		value="Number of days">
-		Number of Days <input type="text" name="project[fundingDuration]"><br><br>
+					<li class="project-location">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Project location</label>
+							</div>
+							<div class="project-input">
+								<input type="text" name="project[location]" value="<%= project.location %>" class="form-control">
+							</div>
+						</div>
+					</li>
 
-	<label>Funding goal</label>
-	<input type="text" name="project[fundingGoal]" value="<%= project.escape('funding_goal') %>"><br><br>
+					<li class="project-funding-duration">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Funding duration</label>
+							</div>
+							<div class="project-input">
+								<input 
+									type="radio" 
+									name="project[fundingDuration]" 
+									value="Number of days">
+									Number of Days <input type="text" name="project[fundingDuration]" class="form-control">
+							</div>
+						</div>
+					</li>
 
-	<input type="submit" class="btn btn-primary" value="Continue">
-</form>
+					<li class="project-funding-goal">
+						<div class="grey-field">
+							<div class="project-label">
+								<label>Funding goal</label>
+							</div>
+							<div class="project-input">
+								<input type="text" name="project[fundingGoal]" value="<%= project.fundingGoal %>" class="form-control">
+							</div>
+						</div>
+					</li>
+				</ol>
+	
+	
+				<input type="submit" class="btn btn-primary" value="Let's get started!" class="form-control">
+	
+				</div>
+			</form>
+	</div>
+	
+	<div class="preview-bar col-xs-3">
+		<p>For Preview!</p><br>
+		<p>Test</p>
+	</div>
+</div>
+    
