--- a/app/assets/templates/home_page/carousel.jst.ejs
+++ b/app/assets/templates/home_page/carousel.jst.ejs
@@ -1,9 +1,10 @@
 
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+    <li data-target="#home-page-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#home-page-carousel" data-slide-to="1" class=""></li>
+    <li data-target="#home-page-carousel" data-slide-to="2" class=""></li>
   </ol>
+	
   <div class="carousel-inner">
     <div class="item ad1 active">
       <div class="container">
@@ -18,7 +19,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>We can all make great things.</h1>
-          <p><a class="btn btn-lg btn-success" href="#" role="button">Start a Project</a></p>
+          <p><a class="btn btn-lg btn-success" href="/#/projects/new" role="button">Start a Project</a></p>
         </div>
       </div>
     </div>
@@ -33,5 +34,5 @@
     </div>
   </div>
 	
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev"></a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next"></a>
+  <a class="left carousel-control" href="#home-page-carousel" data-slide="prev"></a>
+  <a class="right carousel-control" href="#home-page-carousel" data-slide="next"></a>
