--- a/app/assets/templates/home_page/staff_picks.jst.ejs
+++ b/app/assets/templates/home_page/staff_picks.jst.ejs
@@ -1,4 +1,4 @@
-<div class="staff-picks row">
+<div class="home-page-view row">
  <div class="col-xs-9 staff-picks-body">
  	 <h3>Staff Picks: </h3>
  	 
