--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,6 +1,7 @@
+<div class="project-details">
 	<h1><%= project.escape('title') %></h1>
 	<h6> by <%= project.creator() %></h6>
-	<h5>Category: <%= project.escape('category_name') %></h5>
+	<h5>Category: <%= gon.categories[project.escape('category_name')] %></h5>
 	<h5>Location: <%= project.escape('project_location') %></h5>
 	<h4>Funding Goal: $<%= project.escape('funding_goal') %></h4>
 	<h5>Funding Duration: <%= project.fundingPeriod() %></h5>
@@ -20,3 +21,4 @@
 	
 	<h3>FAQ</h3>
 	<p><%= projectBody.escape('faq') %>
+</div>
