--- a/app/assets/templates/home_page/staff_picks.jst.ejs
+++ b/app/assets/templates/home_page/staff_picks.jst.ejs
@@ -1,5 +1,5 @@
-<div class="home-page-view row">
- <div class="col-xs-9 staff-picks-body">
+<div class="row">
+ <div class="col-xs-9 page-body">
  	 <h3>Staff Picks: </h3>
  	 
  </div>
