--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
     </div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav primary-links">
-				<li><a href="<%= api_projects_url %>">Discover</a></li>
+				<li><a href="/#/discover">Discover</a></li>
 				<li><a href="/#/projects/new">Start</a></li>
 			</ul>
 			<span class="for-search-bar"></span>
