--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,24 +1,34 @@
-<div class="project-details">
+<div class="project-header">
 	<h1><%= project.escape('title') %></h1>
 	<h6> by <%= project.creator() %></h6>
-	<h5>Category: <%= gon.categories[project.escape('category_name')] %></h5>
+	<h5>Category: <%= gon.categories[this.model.collection.category.escape('name')] %></h5>
 	<h5>Location: <%= project.escape('project_location') %></h5>
-	<h4>Funding Goal: $<%= project.escape('funding_goal') %></h4>
-	<h5>Funding Duration: <%= project.fundingPeriod() %></h5>
-
-	<br><br>
-	<p><%= project.escape('short_blurb') %></p>
 </div>
 
-<div class="project-body">
-	<h1>Description</h1>
-	<p><%= projectBody.escape('description') %></p>
-	<br><br>
-	
-	<h3>Risks and Challenges</h3>
-	<p><%= projectBody.escape('challenges') %></p>
-	<br><br>
-	
-	<h3>FAQ</h3>
-	<p><%= projectBody.escape('faq') %>
+<div class="container row">
+	<div class="col-xs-1"></div>
+	<div class="project-view-window col-xs-10 row">
+		<div class="project-view-body col-xs-8">			
+			<h3><%= project.escape('short_blurb') %></h3>
+
+			<p><%= projectBody.escape('description') %></p>
+
+			<h3 class="project-topic">Risks and Challenges</h3>
+			<p><%= projectBody.escape('challenges') %></p>
+
+			<h3 class="project-topic">FAQ</h3>
+			<p><%= projectBody.escape('faq') %></p>
+		</div>
+      
+		<div class="project-view-side col-xs-4">
+			<h4>pledged of $<%= project.escape('funding_goal') %> goal</h4>
+			<h1 class="important"><%= project.daysLeft() %> <sup>days to go</sup></h1>
+			<button class="btn support-btn btn-success">
+				<p>Back This Project</p><br>
+				<sup style="color:black">$1 minimum pledge</sup>
+			</button>
+			<p class="field-note">This project will be funded on <%= project.endDate() %>.</p>
+			<h5><strong>Funding Duration:</strong></h5><p><%= project.fundingPeriod() %></p>
+		</div>		
+	</div>	
 </div>
