Working Backings associations at Rails and Backbone levels.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,3 +38,11 @@ body {
 p.field-note {
 	font-size: 0.8em;
 }
+
+.greenify {
+	color: #76CE1E;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bold;
+}
