Finish Backbone layer for Stars/likes

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -24,6 +24,8 @@
      </div>
 			
 		<div class="project-view-side col-xs-4">
+			<button class="btn favorites"><img src="assets/starMe.png" height="40" width="40"> Like this Project!</button>
+			
 			<h1 class="important"><%= project.numBackers() %></h1>
 			<h4>backers</h4>
 			
