--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -48,7 +48,7 @@ $primary-background-color: #EEF2EA;
 	
 	.project-view-side {
 		margin-top: 30px;
-		padding: 10px 0;
+		padding: 10px 0 10px 5px;
   	
 			p {
 				font-size: 12px;
@@ -78,4 +78,11 @@ $primary-background-color: #EEF2EA;
 	p {
 		font-size: 18px;
 	}
+}
+
+.favorites {
+	padding-left: 0;
+	background-color: white;
+	margin-left: auto;
+	margin-right: auto;
 }
