Add filepicker capabilities

--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -20,6 +20,7 @@ $primary-background-color: #EEF2EA;
 .project-view-window {
 	background-color: white;
 	padding-left: 3px;
+	padding-top: 20px;
 	margin: 0px 5px;
 	border-radius: 10px;
 	font-size: 16px;
