--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -10,7 +10,9 @@
 	<div class="col-xs-1"></div>
 	<div class="project-view-window col-xs-10 row">
 		<div class="project-view-body col-xs-8">
-			<div class="where-formatting-matters">
+			<img src="<%= project.escape('filepicker_url') %>" width="580" height="500">
+			
+			<div class="where-formatting-matters">	
 				<h3><%= project.escape('short_blurb') %></h3>
 
 				<p><%= projectBody.escape('description') %></p>
