--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/#">
-				<%= image_tag("PunchStarterLogo.png", :width=> '200px', :height =>'100px')%>
+				<%= image_tag("punchstarterLogo.png")%>
 			</a>
     </div>
 		<div class="navbar-collapse collapse">
